fix(landing): overflow attribution text with ... on mobile (#1717)
* feat(landing): include version in landing page

* fix(landing): overflow attribution text with ...

--- a/packages/landing/static/index.css
+++ b/packages/landing/static/index.css
@@ -73,6 +73,10 @@ label {
     margin-top:8px;
 }
 
+label {
+    margin-top:8px;
+}
+
 .align-center {
     align-items: center;
 }
@@ -216,4 +220,15 @@ label {
 .side-nav[aria-hidden='true'] a {
     visibility: hidden;
     transition: 0.5s;
+}
+
+
+.mapboxgl-ctrl-attrib {
+    max-width: 100vw;
+}
+.mapboxgl-ctrl-attrib-inner {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-align: right;
 }
